# cse291p

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: Component-to-Code  Component-to-Code.md  codebase.md  improvement.md  template-instantiation.md  visibility-algorithm.md
examples/: evaluation_example.py  scrape_example.py
src/: instantiation.py  run.py  types.py
src/cse291p/: __init__.py  app.py  cli.py  types.py
src/cse291p/evaluation/: __init__.py  metrics.py
src/cse291p/pipeline/: __init__.py  run.py
src/cse291p/scraping/: __init__.py  scraper.py
tests/: __init__.py  auto_mock_benchmark_results.json  compare_all.py  compare_all.sh  list_auto_mock_benchmarks.py  test_auto_mock_benchmarks.py  test_constraint_types.py  test_e2e_pipeline.py  test_evaluation_metrics.py  test_evaluation_on_examples.py  test_evaluation_simple.py  test_global_inference.py  test_input_loader.py  test_instantiation.py  test_instantiation_numpy.py  test_learning_noisetolerant.py  test_sat_solver.py  test_view.py
tests/outputs/comparison/: 1x1_fixed-ltr_centered-x_aspectratio-4-3.txt  1x1_fixed-ltwh.txt  1x1_fixed-lw_relative-h_centered-y.txt  1x1_fixed-th_relative-w_centered-x.txt  1x1_fixed-whl_centered-y.txt  1x1_fixed-wht_centered-x.txt  1x2_fixed-ltwh.txt  2x1_fixed-ltwh.txt  onetwo.txt
tests/outputs/original/: 1x1_fixed-ltr_centered-x_aspectratio-4-3.json  1x1_fixed-ltwh.json  1x1_fixed-lw_relative-h_centered-y.json  1x1_fixed-th_relative-w_centered-x.json  1x1_fixed-whl_centered-y.json  1x1_fixed-wht_centered-x.json  2x1_fixed-ltrb_equal-wh.json  2x1_fixed-ltwh.json  onetwo.json
tests/outputs/refactored/: 1x1_fixed-ltwh.json  onetwo.json  (+7 more)
(+49 files in other folders)
