[project]
name = "cse291p"
version = "0.1.0"
description = "Pipeline-oriented constraint synthesis from layout examples"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.3",
    "click>=8.0.0",
    "intervaltree>=3.1.0",
    "z3-solver>=4.12.0",
    "kiwisolver>=1.4.0",
    "sympy>=1.12",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "more-itertools>=10.0.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "pylint>=3.0.0",
]
web = [
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
    "aiofiles>=23.0.0",
]
prolog = [
    "pyswip>=0.2.10",
]
scraping = [
    "selenium>=4.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
