[project]
name = "cse291p"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.3",
    "numpy>=1.24.0",
    "intervaltree>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "rich>=14.2.0",
    "ruff>=0.14.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
lint.select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

